--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  dropEffect="none" class="no-js">
+<html lang="en" ng-app="homepage">
 <head>
 <meta charset="utf-8" />
 
@@ -14,11 +14,13 @@
 
 </head>
 
-<body class="zhi">
+<body class="zhi" ng-controller="homepageMani" ng-init="returnFBusername()">
+
+<div><button type="button" class="btn btn-primary" ng-click="returnFBusername()">test</button></div>
 <div class="page-wraper">
 <div class="username">
-	<h1 id="username">{{}}</h1>
-	<a href="/auth/logout/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Logout</a>
+	<h1 id="username" style="color:rgb(80,80,80);"></h1>
+	<a href="/auth/logout/facebook" class="btn btn-primary" style="float:right;"><span class="fa fa-facebook"></span> Logout</a>
 </div>
 <div class="nav">
 	<a href="question.html">Go back to Carry Room</a>
@@ -30,16 +32,16 @@
 	<i class="icon icon-profile-tab-home"></i><span class="hide-text">Homepage</span>
 	</a>
 	<a class="item ">Like
-	<span class="num">{{number of like recieve}}</span>
+	<span class="num">number of like recieve</span>
 	</a>
 	<a class="item ">Dislike
-	<span class="num">{{number of dislike recieve}}</span>
+	<span class="num">number of dislike recieve</span>
 	</a>
 	<a class="item ">Ask
-	<span class="num">{{number of questions that ask}}</span>
+	<span class="num">number of questions that ask</span>
 	</a>
 	<a class="item ">Reply
-	<span class="num">{{number of reply}}</span>
+	<span class="num">number of reply</span>
 	</a>
 </div>
 
@@ -57,7 +59,7 @@
 
 <div class="zm-profile-section-item zg-clear">
 	<a class="zm-profile-vote-count" >
-		<div class="zm-profile-vote-num">{{likes that this answer get}}</div>
+		<div class="zm-profile-vote-num">likes that this answer get</div>
 		<div class="zm-profile-vote-type">Likes</div>
 	</a>
 <!-- want to have three most recent answers here-->
@@ -72,7 +74,7 @@
 </div>
 <div class="zm-profile-section-item zg-clear">
 	<a class="zm-profile-vote-count" >
-		<div class="zm-profile-vote-num">{{likes that this answer get}}</div>
+		<div class="zm-profile-vote-num">likes that this answer get</div>
 		<div class="zm-profile-vote-type">Likes</div>
 	</a>
 <!-- want to have three most recent answers here-->
@@ -87,7 +89,7 @@
 </div>
 <div class="zm-profile-section-item zg-clear">
 	<a class="zm-profile-vote-count">
-		<div class="zm-profile-vote-num">{{likes that this answer get}}</div>
+		<div class="zm-profile-vote-num">likes that this answer get</div>
 		<div class="zm-profile-vote-type">Likes</div>
 	</a>
 <!-- want to have three most recent answers here-->
@@ -131,7 +133,7 @@
 </script>
 <!-- change the acheivement medal-->
 <script>
-	var likes = {{number of likes get}}
+/*var likes = {{number of likes get}}
 	if(likes > 20 && likes <50)
 	{
 		document.getElementById("medal").src = "img/medal/20.png";
@@ -148,7 +150,7 @@
 		document.getElementById("achievementWords").innerHTML = "You recieve more than 100 likes!"
 	}
 
-
+*/
 </script>
    <!-- jQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -157,14 +159,31 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-sanitize.min.js"></script>
     <script src="js/lib/Autolinker.min.js"></script>
+    <script>
+    angular.module('homepage', [])
+		.controller('homepageMani', ['$scope', '$http', '$window', function($scope, $http, $window) {
+			$scope.returnFBusername = function(){
+				$http.get('/api/users/current')
+				.success(function(result){
+				if(! result){
+					console.log("Sorry you have to login");
+				}
+				else{			
+					console.log(result.fb.name);
+					document.getElementById("username").innerHTML="This is your homepage "+result.fb.name+"! Enjoy your day!"; 
+				}
+				})
+			}
+		}]);
+    </script>
     <!-- Bootstrap -->
     <script src="webjs/bootstrap.min.js"></script>
 
     <!-- local scripts for our application -->
     <script src="js/lib/ngStorage.min.js"></script>
+    <!--
     <script src="js/app.js"></script>
-    <script src="js/filters/questionFilter.js"></script>
-    <script src="js/controllers/todoCtrl.js"></script>
+    <script src="js/controllers/homepage.js"></script>-->
 
 <input type="hidden" name="_xsrf" value="3d99b059b816aca9a5c5a74687857108"/>
 </body>
