--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<div class="container">
 					<div class="text-center">
 						<p id="welcome">Login or Register with:</p>
-						<a href="/auth/login/facebook" class="not login btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
-						<a href="/auth/logout/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Logout</a>
+						<a href="/auth/login/facebook" id="notLogin" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
+						<a href="/auth/logout/facebook" class="btn btn-primary" id="logout" style="display:none"><span class="fa fa-facebook"></span> Logout</a>
 						<a href="homepage.html" id="homepage"style="display:none">Homepage</a>  
 					</div>
 					</div>
@@ -39,7 +39,7 @@
 					</div>
 					<div class="col-md-4 navTitle">
 						<img class="icon" src = "css/icon1.png">
-						<h1>CarryRoom</h1>
+						<h1 id="user">CarryRoom</h1>
 					</div>
 					<div class="col-md-4">
 		            </div>
@@ -97,7 +97,7 @@
 
 		<script>
 		angular.module('app', [])
-		.controller('controller', ['$scope', '$location', '$window', function($scope, $location, $window) {
+		.controller('controller', ['$scope', '$location','$http' ,'$window', function($scope, $location, $http,$window) {
 			$scope.example = {
 				text: '',
 				word: /^\s*\w*\s*$/
@@ -105,6 +105,27 @@
 			$scope.join = function () {
 				$window.location.href = 'question.html#/' + $scope.example.text;
 			}
+			$http.get('/api/users/current')
+			.success(function(result){
+			if(! result){
+				console.log("Sorry you have to login");
+			}
+			else{
+				console.log(result.fb.name);
+				$scope.username = result.fb.name;
+				document.getElementById("user").innerHTML="Choose your CarryRoom "+result.fb.name;
+				document.getElementById("user").style.fontSize="20px";
+				document.getElementById("user").style.display="inline";
+				document.getElementById("welcome").style.display="none";
+				document.getElementById("logout").style.display="";
+				document.getElementById("logout").style.float="right";
+				document.getElementById("notLogin").innerHTML="Homepage";
+				document.getElementById("notLogin").setAttribute("href","homepage.html");
+			}
+		})
+		.error(function(result){
+			console.log("fffffffffffff");
+		});	
 		}]);
 		</script>
 		<!--randomly show quote and background image-->
