--- a/question.html
+++ b/question.html
@@ -24,7 +24,55 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 
 </head>
-<body ng-controller="TodoCtrl" style="background-color: #e8e8e8">
+
+<body ng-controller="TodoCtrl" style="background-color: #e8e8e8" ng-init="returnFBusername()">
+
+    <!-- VISUALIZATION PART BEGINS -->
+    <div id="myModal1" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" id ="interactionOuter">
+            <!-- Modal content-->
+            <div class="modal-content visModule">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">CarryVis: <small>Visual Analytics for CarryRoom</small></h4>
+                </div>
+                <div class="modal-body">
+                    <p>Some text in the modal.</p>
+
+                    <!-- Here goes the content view -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Forum Flow View</div>
+                        <div class="panel-body">
+                            <div class="col-md-12">
+                                <div class="chartLabel"></div>
+                                <div id="contentView"></div>
+                            </div>
+                        </div>
+                    </div><!-- content view ends -->
+
+                    <!-- Here goes the interaction view -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Interaction View</div>
+                        <div class="panel-body" >
+                            <div class="col-md-12">
+                                <div id="interactionView"></div>
+                            </div>
+                        </div>
+                    </div><!-- interaction view ends -->
+
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- VISUALIZATION PART ENDS -->
+
+
     <div class="space">
         <div class="container" >
                 <!--Student login button-->
@@ -32,10 +80,15 @@
                 <!-- fb start -->
                     <div class="container">
                     <div class="text-center">
-                        <p>Login or Register with:</p>
-                        <a href="/auth/login/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
-                        <a href="/auth/logout/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Logout</a>
-                        <div><button type="button" class="btn btn-primary" ng-click="returnFBusername()">test</button></div>
+                        <p id="loginWord">Login or Register with:</p>
+                        <a href="/auth/login/facebook" class="btn btn-primary" id="notLogin"><span class="fa fa-facebook"></span> Facebook</a>
+                        <a href="/auth/logout/facebook" class="btn btn-primary" style="display:none" id="logout"><span class="fa fa-facebook"></span> Logout</a>
+                        <!--<div><button type="button" class="btn btn-primary" ng-click="returnFBusername()">test</button></div>-->
+                        <!-- Button for VIS -->
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal1">
+                            Open CarryVis
+                        </button>
+                        <!--end of VIS Button -->
                     </div>
                     </div>
                     <!-- fb end -->
@@ -377,6 +430,15 @@
     <script src="js/app.js"></script>
     <script src="js/filters/questionFilter.js"></script>
     <script src="js/controllers/todoCtrl.js"></script>
+
+    <!-- this part goes for vis -->
+    <script src="js/vis/data/network.js"></script>
+
+
+    <script src="js/lib/d3.js"></script>
+    <script src="js/vis/main_vis.js"></script>
+    <script src="js/vis/graph.js"></script>
+
 
     <!-- CUSTOM CODE TO RELOAD UPON CHANGE OF ROOM -->
     <script>
