--- a/question.html
+++ b/question.html
@@ -305,11 +305,11 @@
                             <h2 ng-class="{completed: todo.completed}">
                                 <span class="label label-danger" ng-show="todo.new">New</span>
                                 <span class="iconStyle glyphicon glyphicon-question-sign"></span>
-                                <a href="#">{{todo.head}}</a>
+                                <a href="#" ng-bind-html="todo.head"></a>
                                 <span ng-switch-when="?" class="iconStyle glyphicon glyphicon-question-sign"></span>
                                 <span ng-switch-when="!" class="glyphicon glyphicon-ice-lolly"></span>
                             </h2>
-                            <p>{{todo.linkedDesc}}</p>
+                            <p ng-bind-html="todo.linkedDesc"></p>
                             <button ng-show="isAdmin" class="btn btn-default btn-xs glyphicon glyphicon-check"
                                     ng-click="toggleCompleted(todo)">Toggle Completed</button>
                             &nbsp;
