Browser icon for homepage.html. Delete unnecessary image

--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="http://static.zhihu.com/static/revved/-/css/pages/profile/main.a4ee1916.css">
 <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
 <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-
+<link rel="shortcut icon" href="css/icon1.png" />
 </head>
 
 <body class="zhi" ng-controller="homepageMani" ng-init="returnFBusername()">
@@ -23,7 +23,7 @@
 	<a href="/auth/logout/facebook" class="btn btn-primary" style="float:right;"><span class="fa fa-facebook"></span> Logout</a>
 </div>
 <div class="nav">
-	<a href="question.html">Go back to Carry Room</a>
+	<a href="question.html">Go back to General Carry Room</a>
 </div>
 
 <div class="profile-navbar clearfix">
