--- a/question.html
+++ b/question.html
@@ -203,6 +203,7 @@
 
                         <div class="posttext pull-left">
                             <!-- text-angular richtext editor -->
+                            <input type="text" class="form-control" ng-model="input.title" placeholder="title">
                             <div text-angular ng-model="input.wholeMsg">
                             </div>
 
@@ -336,12 +337,12 @@
                             <h2 ng-class="{completed: todo.completed}">
                                 <span class="label label-danger" ng-show="todo.new">New</span>
                                 <span class="iconStyle glyphicon glyphicon-question-sign"></span>
-                                <a href="#" ng-bind-html="todo.head"></a>
+                                <span ng-bind-html="todo.head"></span>
                                 <span ng-switch-when="?" class="iconStyle glyphicon glyphicon-question-sign"></span>
                                 <span ng-switch-when="!" class="glyphicon glyphicon-ice-lolly"></span>
                             </h2>
-                            <!--
                             <p ng-bind-html="todo.linkedDesc"></p>
+                            <!--
                             <button ng-show="isAdmin" class="btn btn-default btn-xs glyphicon glyphicon-check"
                                     ng-click="toggleCompleted(todo)">Toggle Completed</button>
                             &nbsp;
