--- a/question.html
+++ b/question.html
@@ -12,16 +12,19 @@
     <meta http-equiv="pragma" content="no-cache" />
 
     <title>Question Room</title>
+    <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <!-- Optional theme -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous"> -->
+
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href="css/custom.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="css/icon1.png" />
 
     <link rel="stylesheet" href="css/filter.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
     <!-- font-awesome: dependency of textangular -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- textangular -->
@@ -100,14 +103,8 @@
             <!-- fb end -->
         </div>
     </div>
-    <div class="col-lg-3 col-md-3">
+    <div class="col-md-3">
         <div>
-            <h3>Poll of this Week</h3>
-            <div class="divline"></div>
-
-            <div class="sidebarblock" ng-repeat="todo in todos |filter: {roomId : roomId}|questionFilter_1 |questionFilter:maxQuestion "
-            ng-class="{completed: todo.completed, editing: todo == editedTodo}" >
-
             <div class="blocktxt">
                 <p>{{todo.wholeMsg}}</p>
                 <form action="#" method="post" class="form">
@@ -151,12 +148,36 @@
                 </ul>
             </div>
         </div>
+        <div class="sidebarblock">
+            <h3>Sort by</h3>
+            <div class="divline"></div>
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default">Likes</button>
+                <button type="button" class="btn btn-default">Times</button>
+            </div>
+        </div>
+        <div class="sidebarblock">
+            <h3>Try more classrooms</h3>
+            <div class="divline"></div>
+            <div class="blocktxt">
+                <ul class="cats" ng-repeat="room in roomList">
+                    <li><a ng-href="#{{room.name}}" ng-bind="room.name"></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="container">
+                <br/>
+                <p>Copyright &copy Why Naming Again. All Rights Reserved</p>
+            </div>
+        </div>
+        <!-- -->
     </div>
 
     <!-- -->
 </div>
 
-<div class="col-lg-6 col-md-6">
+<div class="col-md-9">
     <!-- LEAVE SPACE FOR FUTURE SEARCH -->
     <!--
     <div class="searchQuestion">
@@ -405,33 +426,6 @@ ng-click="selectTag('#Assignment')">Assignment</button>
 </div>
 </div>
 </div>
-<div class="col-lg-3 col-md-3">
-
-    <div class="sidebarblock">
-        <h3>Sort by</h3>
-        <div class="divline"></div>
-        <div class="btn-group" role="group">
-            <button type="button" class="btn btn-default">Likes</button>
-            <button type="button" class="btn btn-default">Times</button>
-        </div>
-    </div>
-    <div class="sidebarblock">
-        <h3>Try more classrooms</h3>
-        <div class="divline"></div>
-        <div class="blocktxt">
-            <ul class="cats" ng-repeat="room in roomList">
-                <li><a ng-href="#{{room.name}}" ng-bind="room.name"></a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="bottom">
-        <div class="container">
-            <br/>
-            <p>Copyright &copy Why Naming Again. All Rights Reserved</p>
-        </div>
-    </div>
-    <!-- -->
-</div>
 
 <!-- jQuery -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -448,7 +442,8 @@ ng-click="selectTag('#Assignment')">Assignment</button>
 <link type="text/stylesheet" rel="stylesheet" href="css/emoji.min.css" /> -->
 
 <!-- Bootstrap -->
-<script src="webjs/bootstrap.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
 
 <!-- local scripts for our application -->
 <script src="js/lib/ngStorage.min.js"></script>
