Question font color

--- a/homepage.html
+++ b/homepage.html
@@ -291,6 +291,14 @@
 						document.getElementById('like2').style.display="";
 						document.getElementById('like2').innerHTML= likenumber[thirdIndex]-dislikenumber[thirdIndex];
 						document.getElementById('likes2').style.display="";
+						//questoin font size
+						document.getElementById('q0').style.fontSize="20px";
+						document.getElementById('q1').style.fontSize="20px";
+						document.getElementById('q2').style.fontSize="20px";
+						//question font color
+						document.getElementById('q0').style.color="rgb(100,100,100)";
+						document.getElementById('q1').style.color="rgb(100,100,100)";
+						document.getElementById('q2').style.color="rgb(100,100,100)";
 					}
 					
 					$scope.likes = totalLike;
