homepage update with title

--- a/homepage.html
+++ b/homepage.html
@@ -80,6 +80,7 @@
 		<!-- want to have three most recent answers here-->
 			<div class="zm-profile-section-main">
 				<h2 class="zm-profile-question">
+					<p id="question0">test
 					<p class="question_link question" id="q0" style="display:none">You haven't aer question yet!</p>
 				</h2>
 
@@ -94,6 +95,7 @@
 		<!-- want to have three most recent answers here-->
 			<div class="zm-profile-section-main">
 				<h2 class="zm-profile-question">
+					<p id="question1">test
 					<p class="question_link question" id="q1" style="display:none">Question2</p>
 				</h2>
 
@@ -108,6 +110,7 @@
 		<!-- want to have three most recent answers here-->
 			<div class="zm-profile-section-main">
 				<h2 class="zm-profile-question">
+					<p id="question2">test
 					<p class="question_link question" id="q2" style="display:none">Question3</p>
 				</h2>
 	</div>
@@ -202,7 +205,7 @@
 					{
 						for(var i=0; i<totalQuestion;i++){
 							document.getElementById('q'+i).style.display="";
-							document.getElementById('q'+i).innerHTML=result.questions[i].wholeMsg;
+							document.getElementById('q'+i).innerHTML=result.questions[i].desc;
 							document.getElementById('q'+i).style.fontSize="20px";
 							document.getElementById('q'+i).style.color="rgb(80,80,80)";
 							document.getElementById('like'+i).style.display="";
@@ -275,19 +278,19 @@
 						console.log("first index is" +firstIndex);
 						console.log(result.questions[firstIndex].wholeMsg);
 						document.getElementById('q0').style.display="";
-						document.getElementById('q0').innerHTML=result.questions[firstIndex].wholeMsg;
+						document.getElementById('q0').innerHTML=result.questions[firstIndex].desc;
 						document.getElementById('like0').style.display="";
 						document.getElementById('like0').innerHTML= likenumber[firstIndex]-dislikenumber[firstIndex];
 						document.getElementById('likes0').style.display="";
 						var secondIndex = findsecond(date);
 						document.getElementById('q1').style.display="";
-						document.getElementById('q1').innerHTML=result.questions[secondIndex].wholeMsg;
+						document.getElementById('q1').innerHTML=result.questions[secondIndex].desc;
 						document.getElementById('like1').style.display="";
 						document.getElementById('like1').innerHTML= likenumber[secondIndex]-dislikenumber[secondIndex];
 						document.getElementById('likes1').style.display="";
 						var thirdIndex = findthird(date); 
 						document.getElementById('q2').style.display="";
-						document.getElementById('q2').innerHTML=result.questions[thirdIndex].wholeMsg;
+						document.getElementById('q2').innerHTML=result.questions[thirdIndex].desc;
 						document.getElementById('like2').style.display="";
 						document.getElementById('like2').innerHTML= likenumber[thirdIndex]-dislikenumber[thirdIndex];
 						document.getElementById('likes2').style.display="";
@@ -299,6 +302,14 @@
 						document.getElementById('q0').style.color="rgb(100,100,100)";
 						document.getElementById('q1').style.color="rgb(100,100,100)";
 						document.getElementById('q2').style.color="rgb(100,100,100)";
+						//question title
+						document.getElementById('question0').style.color="rgb(70,70,70)";
+						document.getElementById('question1').style.color="rgb(70,70,70)";
+						document.getElementById('question2').style.color="rgb(70,70,70)";
+						//question tille color
+						document.getElementById('question0').style.fontSize="18px";
+						document.getElementById('question1').style.fontSize="18px";
+						document.getElementById('question2').style.fontSize="18px";
 					}
 					
 					$scope.likes = totalLike;
