homepage minor improvement

--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,7 @@
 	<a href="/auth/logout/facebook" class="btn btn-primary" style="float:right;"><span class="fa fa-facebook"></span> Logout</a>
 </div>
 <div class="nav">
-	<a href="question.html">Go back to General Carry Room</a>
+	<a href="question.html#/comp3111h">Go back to comp3111h to Carry</a>
 </div>
 
 <div class="profile-navbar clearfix">
