--- a/question.html
+++ b/question.html
@@ -104,6 +104,7 @@
         </div>
     </div>
     <div class="col-md-3">
+        <!-- Polling -->
         <div>
             <div class="blocktxt">
                 <p>{{todo.wholeMsg}}</p>
@@ -132,6 +133,7 @@
             </div>
 
         </div>
+
         <div class="sidebarblock">
             <h3>Hashtags</h3>
             <div class="divline"></div>
