--- a/questio.html
+++ b/questio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="todomvc" scroll>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +11,15 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/custom.css">
+
+    <!-- font-awesome: dependency of textangular -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <!-- textangular -->
+    <link rel='stylesheet' href='/node_modules/textangular/dist/textAngular.css'>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,9 +27,48 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body g-controller="TodoCtrl" ng-init="returnFBusername()">
+
+    <!-- VISUALIZATION PART BEGINS -->
+    <div id="myModal1" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" id ="interactionOuter">
+            <!-- Modal content-->
+            <div class="modal-content visModule">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">CarryVis: <small>Visual Analytics for CarryRoom</small></h4>
+                </div>
+                <div class="modal-body">
+                    <!-- Here goes the content view -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Forum Flow View</div>
+                        <div class="panel-body">
+                            <div class = "row" id="contentView"></div>
+                        </div>
+                    </div><!-- content view ends -->
+
+                    <!-- Here goes the interaction view -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Interaction View</div>
+                        <div class="panel-body" >
+                            <div id="interactionView"></div>
+                        </div>
+                    </div><!-- interaction view ends -->
+
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- VISUALIZATION PART ENDS -->
+
     <!-- Navbar -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-carry-room">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -36,10 +84,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a type="button" data-toggle="modal" data-target="#myModal1">CarryVis</a></li>
+                    <li><a data-toggle="modal" data-target="#myModal1">CarryVis</a></li>
                     <li><a href="auth/login/facebook">Login</a></li>
                     <!-- TODO: hide these conditionally -->
-                    <p class="navbar-text navbar-right">Howody, <a href="#" class="navbar-link">{{username}}</a></p>
+                    <li><p class="navbar-text">Howody, {{username}}</p></li>
                     <li><a href="homepage.html">Personal Homepage</a></li>
                     <li><a href="auth/logout/facebook">Logout</a></li>
                 </ul>
@@ -50,12 +98,158 @@
     <div class="container-fluid">
         <!-- Sidebar -->
         <div class="col-md-3">
-
+            <div class="sidebarblock">
+                <h3>Hashtags</h3>
+                <div class="divline"></div>
+                <div class="blocktxt">
+                    <ul class="cats" ng-model="tagFilter">
+                        <li><a src="javascript:void(0)">Midterm</a></li>
+                        <li><a src="javascript:void(0)">Final</a></li>
+                        <li><a src="javascript:void(0)">Assignment</a></li>
+                        <li><a src="javascript:void(0)">All</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="sidebarblock">
+                <h3>Sort by</h3>
+                <div class="divline"></div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default">Likes</button>
+                    <button type="button" class="btn btn-default">Times</button>
+                </div>
+            </div>
+            <div class="sidebarblock">
+                <h3>Try more classrooms</h3>
+                <div class="divline"></div>
+                <div class="blocktxt">
+                    <ul class="cats" ng-repeat="room in roomList">
+                        <li><a ng-href="#{{room.name}}" ng-bind="room.name"></a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
         <!-- Main Content -->
         <div class="col-md-9">
-                <h1>Hello, world!</h1>
+            <!-- The form for new question -->
+            <div id="new-question" class="card">
+                <div class="container-fluid">
+                    <!-- TODO: Hide the input depending on click action -->
+                    <div id="question-type-choice" class="form-group">
+                        <ul class="nav nav-pills">
+                            <li role="presentation" class="active"><a src="javascript:void(0)">New Question</a></li>
+                            <li role="presentation"><a src="javascript:void(0)">New Polling</a></li>
+                        </ul>
+                    </div>
+                    <!-- New Question -->
+                    <div id="question">
+                        <div class="form-group">
+                            <label>Title</label>
+                            <input type="text" class="form-control" ng-model="input.title">
+                        </div>
+                        <div class="form-group">
+                            <label>Description</label>
+                            <div id="input-description" text-angular ng-model="input.wholeMsg">
+                            </div>
+                        </div>
+                        <!-- New Polling -->
+                        <div id="polling" class="form-group">
+                            <label>Polling Choices</label>
+                            <!-- TODO: complete ng-repeat and data binding -->
+                            <div ng-repeat>
+                                <div class="form-group input-group">
+                                    <span class="input-group-addon">Choice {{$index+1}}</span>
+                                    <input type="text" class="form-control" ng-model="">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-default">Add Choice</button>
+                            </div>
+                        </div>
+                        <!-- TODO: add a tags package -->
+                        <div class="form-group">
+                            <label>Tags</label>
+                            <input type="text" class="form-control" ng-model="input.tags">
+                        </div>
+                        <!-- TODO: complete post action -->
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default">Post</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- The Questions -->
+            <span class="" ng-repeat="todo in todos |filter: {roomId : roomId}|questionFilter_2|questionFilter:maxQuestion "
+            ng-class="{completed: todo.completed, editing: todo == editedTodo}">
+                <div class="card">
+                    <div class="container-fluid">
+                        <!-- Left sidebar of question -->
+                        <div class="question-left col-md-2">
+                            <div avatar>
+                                <a src="javascript:void(0)">
+                                    <img class="img-responsive" src="img/avatar.png"/>
+                                </a>
+                            </div>
+                            <div class="text-center like-or-not form-group">
+                                <div class="row"><span class="glyphicon glyphicon-chevron-up"
+                                ng-click="!$storage[todo._id]? addEcho(todo) : ($storage[todo._id] == 'echoed' ? minusEcho(todo) : void(0));"
+                                ng-disabled="!!$storage[todo._id]"></span></div>
+                                <div class="row"><span class=""> {{todo.echo}}</span></div>
+                                <div class="row"><span class="glyphicon glyphicon-chevron-down" ng-click="!$storage[todo._id]? voteDown(todo) : ($storage[todo._id] == 'voteddown' ? voteDownCancel(todo) : void(0));"
+                                ng-disabled="!!$storage[todo._id]"></span></div>
+                            </div>
+                        </div>
+                        <!-- Right content of question -->
+                        <div class="question-right col-md-10">
+                            <h2 head>
+                                <span class="label label-danger" ng-show="todo.new">New</span>
+                                <span class="iconStyle glyphicon glyphicon-question-sign"></span>
+                                <span ng-bind-html="todo.head">Header</span>
+                                <span ng-switch-when="?" class="iconStyle glyphicon glyphicon-question-sign"></span>
+                                <span ng-switch-when="!" class="glyphicon glyphicon-ice-lolly"></span>
+                            </h2>
+                            <p content ng-bind-html="todo.linkedDesc">
+                                Description. Puma's are large, cat-like animals which are found in America. When reports came into London zoo that a wild puma has been spotted 45 miles south of London, they were not taken seriously. However, when evidence began to accumulate, the experts at the zoo felt obliged to investigate.Puma's are large, cat-like animals which are found in America. When reports came into London zoo that a wild puma has been spotted 45 miles south of London, they were not taken seriously. However, when evidence began to accumulate, the experts at the zoo felt obliged to investigate.Puma's are large, cat-like animals which are found in America. When reports came into London zoo that a wild puma has been spotted 45 miles south of London, they were not taken seriously. However, when evidence began to accumulate, the experts at the zoo felt obliged to investigate.
+                            </p>
+                        </div>
+
+                        <!-- Status of question -->
+                        <div class="clearfix">
+                            <div class="pull-right">
+                                <!-- TODO: add toggle hide of replies -->
+                                <span>Posted: {{2012-12-28}}</span>
+                                &nbsp;&nbsp;&nbsp;&nbsp;
+                                <a>{{}} replies</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="replies-{{$index}}" class="container-fluid">
+                        <div class="replies" ng-repeat="reply in todo.reply">
+                            <hr/>
+                            <div class="media reply">
+                                <div class="media-left">
+                                    <a src="javascript:void(0)">
+                                        <img class="media-object" src="img/avatar.png" width=64 height=64 alt="..."/>
+                                    </a>
+                                </div>
+                                <div class="media-body">
+                                    Reply content. Puma's are large, cat-like animals which are found in America. When reports came into London zoo that a wild puma has been spotted 45 miles south of London, they were not taken seriously. However, when evidence began to accumulate, the experts at the zoo felt obliged to investigate.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="add-reply">
+                            <div class="form-group">
+                                <label>Add Reply</label>
+                                <textarea type="text" class="form-control" ng-model="todo.newReply" autofocus="autofocus"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-default" type="button" ng-click="addReply(todo)">Submit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </span>
         </div>
     </div>
 
@@ -66,5 +260,37 @@
     <!-- Bootstrap -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+
+    <!-- AngularJS -->
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+    <script src="js/lib/Autolinker.min.js"></script>
+
+    <!-- local scripts for our application -->
+    <script src="js/lib/ngStorage.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/filters/questionFilter.js"></script>
+    <script src="js/controllers/todoCtrl.js"></script>
+
+    <!-- this part goes for vis -->
+    <script src="js/vis/data/networkData.js"></script>
+    <script src="js/vis/data/flowData.js"></script>
+
+    <script src="js/lib/d3.js"></script>
+    <script src="js/vis/main_vis.js"></script>
+    <script src="js/vis/graph.js"></script>
+    <script src="js/vis/flow.js"></script>
+    <!-- end of vis -->
+
+    <!-- rich text editor -->
+    <script src='/node_modules/textangular/dist/textAngular-rangy.min.js'></script>
+    <script src='/node_modules/textangular/dist/textAngular-sanitize.min.js'></script>
+    <script src='/node_modules/textangular/dist/textAngular.min.js'></script>
+    <!-- /rich text editor -->
+
+    <!-- CUSTOM CODE TO RELOAD UPON CHANGE OF ROOM -->
+    <script>
+    window.onhashchange = function() {
+        window.location.reload();
+    }
 </body>
 </html>
