--- a/question.html
+++ b/question.html
@@ -20,6 +20,10 @@
     <!-- textangular -->
     <link rel='stylesheet' href='/node_modules/textangular/dist/textAngular.css'>
 
+    <!-- ngTags -->
+    <link rel='stylesheet' href='css/ng-tags-input.bootstrap.css'>
+    <link rel='stylesheet' href='css/ng-tags-input.css'>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -167,7 +171,7 @@
                         <!-- TODO: add a tags package -->
                         <div class="form-group">
                             <label>Tags</label>
-                            <input type="text" class="form-control" placeholder="use ',' to separate. e.g.: ios, android, web"ng-model="input.tags">
+                            <tags-input placeholder="use ',' to separate. e.g.: ios, android, web"ng-model="input.tags"></tags-input>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-default" ng-click="addTodo()">Post</button>
@@ -283,6 +287,9 @@
     <script src='/node_modules/textangular/dist/textAngular-sanitize.min.js'></script>
     <script src='/node_modules/textangular/dist/textAngular.min.js'></script>
     <!-- /rich text editor -->
+
+    <!-- ngTags -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/ng-tags-input/3.0.0/ng-tags-input.min.js'></script>
 
     <!-- CUSTOM CODE TO RELOAD UPON CHANGE OF ROOM -->
     <script>
