remove old filter by tags

--- a/question.html
+++ b/question.html
@@ -101,7 +101,7 @@
     <div class="container-fluid">
         <!-- Sidebar -->
         <div class="col-md-3">
-            <div class="sidebarblock">
+            <!-- <div class="sidebarblock">
                 <h3>Hashtags</h3>
                 <div class="divline"></div>
                 <div class="blocktxt">
@@ -112,7 +112,7 @@
                         <li><a src="javascript:void(0)">All</a></li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <div class="sidebarblock">
                 <h3>Sort by</h3>
                 <div class="divline"></div>
